--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   background-color: rgb(22, 22, 167) !important;
   color: white !important;
   max-width: 100% !important;
-  padding-bottom: 5%;
+  padding-bottom: 150px;
 }
 
 .whiteContainer {
